--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,9 @@
     <string name="btnLogout">Log out</string>
     <string name="userName">*User Name:</string>
     <string name="gender">Gender:</string>
-    <string name="age">*Age:</string>
+    <string name="age">Age:</string>
     <string name="btnLoginAftReg">Start your Journey</string>
     <string name="btnNext">Next</string>
     <string name="phoneNumber">Phone Number:</string>
+    <string name="location">Location:</string>
 </resources>
