--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="btnNext">Next</string>
     <string name="phoneNumber">Phone Number:</string>
     <string name="location">Location:</string>
+    <string name="locationHint">Please enter a city name</string>
 </resources>
