--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="phoneNumber">Phone Number:</string>
     <string name="location">Location:</string>
     <string name="locationHint">Please enter a city name</string>
+    <string name="registerNextProm"> (Fields without * are optional) </string>
 </resources>
