--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
     <string name="location">Location:</string>
     <string name="locationHint">Please enter a city name</string>
     <string name="registerNextProm"> (Fields without * are optional) </string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_add">Add</string>
+    <string name="title_my">Profile</string>
+    <string name="search">Search</string>
+    <string name="action_add">Post</string>
+    <string name="action_search">Search</string>
 </resources>
