fix friend data problem, friend page problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,13 @@
     <string name="registerNextProm"> (Fields without * are optional) </string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_add">Focus</string>
+    <string name="title_add">Add</string>
     <string name="title_my">Profile</string>
+    <string name="title_friend">Focus</string>
     <string name="search">Search</string>
     <string name="action_add">Post</string>
     <string name="action_search">Search</string>
+
+
+
 </resources>
