--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="search">Search</string>
     <string name="action_add">Post</string>
     <string name="action_search">Search</string>
-
+    <string name="title_city">City</string>
 
 
 </resources>
