--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">WeTok</string>
     <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
     <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
-    <string name="greeting">WeTok Login</string>
+    <string name="logo">Logo</string>
     <string name="etEmail">Email</string>
     <string name="etPassword">Password</string>
     <string name="btnLogin">Login</string>
